Commit Js Files

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 <body>
   <app-root></app-root>
 
-    <!-- Vendor JS Files -->
-  <scrip type="text/javascript" src="assets/js/main.js"></scrip>
+    <!-- Vendor JS Files 
+    <scrip type="text/javascript" src="assets/js/main.js"></scrip>-->
 </body>
 </html>
