--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark:bg-zinc-900">
   <head>
     <meta charset="utf-8" />
     <title>PerlerWyveth</title>
